# EKF

./: CMakeLists.txt  README.md  config.yaml
26/: pythonPkgInstall.txt  todoList.txt
26/install/: local_setup.sh  setup.sh
26/install/auto_aim/lib/auto_aim/: armor_detect_node  com_node
26/install/auto_aim/share/auto_aim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
26/install/shm_pytorch_processor_pkg/lib/shm_pytorch_processor_pkg/: shm_pytorch_processor_node
26/install/shm_pytorch_processor_pkg/share/shm_pytorch_processor_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
26/log/: latest_build
26/other_files/camera_calibration/: dist.py  show_chessboard.py
26/other_files/tagger/: deleteUnusedImage.py  main.py  renameTemp.py
26/other_files/train/: main.py  predict.py
26/src/auto_aim/: CMakeLists.txt  package.xml
26/src/auto_aim/include/armor_detector/: Armor.h  ArmorAngleKalman.h  ArmorClassifier.h  ArmorDetector.h  ArmorSolver.h  ArmorTracker.h  BallisticSolver.h  LightBar.h  LightBarDetector.h  Params.h  Tracker.h  extended_kalman_filter.hpp  motion_model.hpp
26/src/auto_aim/include/test_codes/: ImagesInput.h  PredictionTrans.h  (+2 more)
26/src/auto_aim/launch/: auto_aim_launch.py
26/src/shared_files/: config.yaml
26/src/shm_pytorch_processor_pkg/: package.xml  setup.cfg  setup.py
include/: Tracker.h  config.h  extended_kalman_filter.hpp  motion_model.hpp
result/csv/: data.csv  multi_step_traj.csv
result/plots/: comparison_plot_script.py
src/: Tracker.cpp  config.cpp  test.cpp
(+59 files in other folders)
